# mlops7

./: README.md
packaging_tutorial/: README.md  pyproject.toml
packaging_tutorial/src/example_package_grupo6mle/: example.py
