[project]
name = "example_package_grupo6mle"
version = "0.0.1"
authors = [
  { name="Roberto Rios", email="rio20979@uvg.edu.gt" },
  { name="Elisa Samayoa", email="rio20979@uvg.edu.gt" },
  { name="Javier Aguilar", email="rio20979@uvg.edu.gt" },
  { name="Julio Avila", email="rio20979@uvg.edu.gt" },
]
description = "A small example package for mle"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/robertriosm/mlops7"
Issues = "https://github.com/robertriosm/mlops7/issues"